--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
            <li class="nav-item">
             <a class="nav-link" routerLink="/auth/signup">auth</a>
           </li> -->
-          <!-- <li *ngIf="type == 'null'" class="nav-item">
+<!-- <li *ngIf="type == 'null'" class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/auth/signin">{{'Sign In' | translate}}</a>
           </li>
           <li *ngIf="type == 'null'" class="nav-item">
@@ -35,15 +35,15 @@
           <li *ngIf="type == 'patient'" class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/auth/signup">patient home</a>
           </li> -->
-          <!-- <li class="nav-item">
+<!-- <li class="nav-item">
             <a class="nav-link" routerLink="/doctor">doctor</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/patient">patient</a>
           </li> -->
-      
-       
-        <!-- </ul>
+
+
+<!-- </ul>
         <div class="d-flex" role="search">
           <button *ngIf="type == 'doctor' || type == 'patient'" class="btn btn-outline-success" (click)="logout()" >{{'logout' | translate}}</button>
         </div>
@@ -52,8 +52,8 @@
 
 <header id="header" class=" sticky-top">
     <div class="container d-flex align-items-center">
-        
-        
+
+
         <a routerLink="/" class="logo me-auto navbar-brand " style="color: #1977cc;">Medilab</a>
         <nav id="navbar" class="navbar order-last order-lg-0 ">
             <ul>
@@ -65,7 +65,7 @@
                 <li><a class="nav-link scrollto" href="#about">About</a></li>
 
                 <li><a class="nav-link scrollto" href="#doctors">Doctors</a></li>
-                <li class="dropdown"><a href="#">Dropdown<i class="fa-solid fa-caret-down"></i></a>
+                <!-- <li class="dropdown"><a href="#">Dropdown<i class="fa-solid fa-caret-down"></i></a>
                     <ul>
                         <li><a href="#">Drop Down 1</a></li>
                         <li class="dropdown"><a href="#">Deep Drop Down <i class="fa-solid fa-caret-left"></i></a>
@@ -81,7 +81,7 @@
                         <li><a href="#">Drop Down 3</a></li>
                         <li><a href="#">Drop Down 4</a></li>
                     </ul>
-                </li>
+                </li> -->
 
                 <li *ngIf="type == 'null'" class="nav-item">
                     <a class="nav-link" routerLinkActive="active" routerLink="/auth/signin">{{'Sign In' | translate}}</a>
@@ -89,21 +89,21 @@
                 <li *ngIf="type == 'null'" class="nav-item">
                     <a class="nav-link" routerLinkActive="active" routerLink="/auth/signup">{{'Sign Up' | translate}}</a>
                 </li>
-                <li *ngIf="type == 'doctor' || type == 'patient'"  class="nav-item">
-                  <a class="nav-link" routerLinkActive="active" (click)="logout()" >{{'logout' | translate}}</a>
-              </li>
-              <li *ngIf="type == 'doctor'" class="nav-item">
-                <a class="nav-link" routerLinkActive="active">doctor home</a>
-              </li>
-              <li *ngIf="type == 'patient'" class="nav-item">
-                <a class="nav-link" routerLinkActive="active" >patient home</a>
-              </li>
+                <li *ngIf="type == 'doctor' || type == 'patient'" class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" (click)="logout()">{{'logout' | translate}}</a>
+                </li>
+                <li *ngIf="type == 'doctor'" class="nav-item">
+                    <a class="nav-link" routerLinkActive="active">doctor home</a>
+                </li>
+                <li *ngIf="type == 'patient'" class="nav-item">
+                    <a class="nav-link" routerLinkActive="active">patient home</a>
+                </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
 
-        <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a>
+        <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">{{'Make an' | translate}}</span> {{'Appointment' | translate}}</a>
 
     </div>
 </header>
