--- a/src/app/admin/view-users/view-users.component.html
+++ b/src/app/admin/view-users/view-users.component.html
@@ -1,10 +1,15 @@
-<div class="container">
+<div class="spinnerCustomStyle " *ngIf="!checkLoader">
+    <mat-spinner></mat-spinner>
+</div>
+
+<div class="container" *ngIf="checkLoader">
     <div class="row d-flex justify-content-center my-2 py-3">
         <h3 class="col-md-3">Filter Users:</h3>
-        <select class="form-select col-md-3 w-25" aria-label="Default select example" (change)="getData($event)" [(ngModel)]="selected">
-            <option *ngFor="let type of types" [value]="type" >{{type}}
-        </option>
-          </select>
+        <select class="form-select col-md-3 w-25" aria-label="Default select example" (change)="getData($event)"
+            [(ngModel)]="selected">
+            <option *ngFor="let type of types" [value]="type">{{type}}
+            </option>
+        </select>
     </div>
     <div class="row">
         <table class="table ">
