--- a/src/app/doctor/components/doctordashboard/doctordashboard.component.html
+++ b/src/app/doctor/components/doctordashboard/doctordashboard.component.html
@@ -1,8 +1,8 @@
- <div class="container-fluid">
-    <div class="row">
-        <div class="col-xl-6 m">
-            <div class=" w-100 ">
-                <ngx-charts-bar-vertical-normalized class="w-100 bg-primary"  [results]="productSalesMulti" [view]="view" [scheme]="colorScheme"
+ <div class="container-fluid mt-5">
+    <div class="row mt-5">
+        <div class="col-xl-6  ">
+            <div >
+                <ngx-charts-bar-vertical-normalized   [results]="productSalesMulti" [view]="view" [scheme]="colorScheme"
                 [schemeType]="schemeType" [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend"
                 [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
                 [yAxisLabel]="yAxisLabel" [legendTitle]="legendTitleMulti" [legendPosition]="legendPosition"
@@ -11,12 +11,17 @@
             </ngx-charts-bar-vertical-normalized>
             </div> 
         </div>
-        <div class="col-xl-6 " >
-            <div class="w-100">
-                <ngx-charts-line-chart class="w-100" [results]="productSalesMulti" [view]="view" [scheme]="colorScheme" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
+        <div class="col-xl-6 cm" >
+            <div >
+                <ngx-charts-line-chart  [results]="productSalesMulti" [view]="view" [scheme]="colorScheme" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
                 [timeline]="timeline">
             </ngx-charts-line-chart>
             </div> 
+        </div>
+        <div class="col-xl-6 cmm">
+            <ngx-charts-pie-chart [results]="productSales" [view]="view" [scheme]="colorScheme" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+            (deactivate)="onDeactivate($event)">
+        </ngx-charts-pie-chart>
         </div>
     </div>
  </div>
