--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -51,9 +51,13 @@
 
 <header id="header" class="sticky-top">
   <div class="container d-flex align-items-center">
-    <a routerLink="/" class="logo me-auto navbar-brand" style="color: #1977cc"
-      >Medilab</a
-    >
+    <img
+      src="../../../assets/logo/GPLogo.svg"
+      routerLink="/"
+      class="logo me-auto navbar-brand"
+      style="width: 80px; height: 80px"
+      alt="logo"
+    />
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
         <li class="nav-item">
@@ -88,9 +92,6 @@
                     </ul>
                 </li> -->
 
-        
-
-        
         <li *ngIf="type == 'admin'" class="nav">
           <a
             class="nav-link"
@@ -157,29 +158,29 @@
           >
         </li>
         <li
-        *ngIf="type == 'doctor' || type == 'patient' || type == 'admin'"
-        class="nav-item"
-      >
-        <a class="nav-link" routerLinkActive="active" (click)="logout()">{{
-          "logout" | translate
-        }}</a>
-      </li>
-      <li *ngIf="type == 'null'" class="nav-item">
-        <a
-          class="nav-link"
-          routerLinkActive="active"
-          routerLink="/auth/signin"
-          >{{ "Sign In" | translate }}</a
+          *ngIf="type == 'doctor' || type == 'patient' || type == 'admin'"
+          class="nav-item"
         >
-      </li>
-      <li *ngIf="type == 'null'" class="nav-item">
-        <a
-          class="nav-link"
-          routerLinkActive="active"
-          routerLink="/auth/signup"
-          >{{ "Sign Up" | translate }}</a
-        >
-      </li>
+          <a class="nav-link" routerLinkActive="active" (click)="logout()">{{
+            "logout" | translate
+          }}</a>
+        </li>
+        <li *ngIf="type == 'null'" class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            routerLink="/auth/signin"
+            >{{ "Sign In" | translate }}</a
+          >
+        </li>
+        <li *ngIf="type == 'null'" class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            routerLink="/auth/signup"
+            >{{ "Sign Up" | translate }}</a
+          >
+        </li>
         <li *ngIf="type == 'patient'" class="nav-item">
           <a class="nav-link" routerLinkActive="active">patient home</a>
         </li>
